tests/NormalTests/paczka1/fuzzy1/99490186.err
Error in line 5: NnODuew A579 39,06
Error in line 8: NnODuew A579 5,9
Error in line 19: 09gM7OFcNYT S972 55,08
Error in line 17: A579 A579 84,0
Error in line 25: 09gM7OFcNYT S972 243,8
Error in line 33: NnODuew S972 45,4
